--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
-[B]Version 1.0.1[/B]
-- Update Strings to string.po
-- Code Cleanup
+[B]Version 1.0.1[/B] 2014-06-30
+- Update Strings to strings.po
+- Added UnitTests
+- And a lot more small improvements
 
 [B]Version 1.0.0[/B]
 - Initial Version
